host/crates/tui/tests/snapshots/snapshots__detail_protobuf_response.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, path_is(\"/v1/metrics\"), \"l\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active           26 requests · 13 KB in · 18 KB out
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.1 KB/s   ━ Sending 1.3 KB/s ─╮
│  16 KB/s                                                                             ┊                                                   │
│                                                                                      ┊                                                   │
│                                                                                      ┊            ┏━┓                                    │
│                                                                                      ┊            ┃ ┃                                    │
│ 8.0 KB/s                                                                             ┊            ┃ ┃                ┏━┓                 │
│                                                                                      ┊            ┃ ┗━┓  ┏┓      ┏━┓ ┃ ┃          ┏━┓    │
│                                                                                      ┊      ┏━┓━┓ ┃   ┗━┓┛┗━━┏━┓━┛ ┗━┓ ┏━━━━━━┓━━┓┃ ┃    │
│                                                                                      ━━┏━━━━┛ ┗━┗━┛ ┏━┛ ┗┓┏━━┛ ┗━━━┛ ┗━┛┓┏━━┓┏┗━━┗┛ ┗━┓━ │
│        0                                                                             ━━┛        ┗━━━┛    ┗┛             ┗┛  ┗┛    ┗━┛ ┗━ │
│                                                                                      00:00.000            00:05.000            00:10.000 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ───────────────────────────────╮╭─ metrics ─ Overview ─ Response ─ Request ─ Call Stack ── ✕ ─╮
│ Name                    Size Type      Status         Time Timeline       ││ HTTP/2 200 OK                                               │
│ token                  391 B json      200          513 ms         █     ▐││                                                             │
│ init                   316 B json      200          2.01 s          ▏    ▐││ Headers (3)                                                 │
│ monitor                302 B json      200          1.58 s          █    ▐││ date: Tue, 29 Sep 2026 05:10:05 GMT                         │
│ events                  17 B json      200          1.45 s          █▏   ▐││ content-type: application/x-protobuf                        │
│ u_4821.png            4.5 KB png       200          476 ms          █    ▐││ content-length: 6                                           │
│ monitor                302 B json      200          1.53 s           ▊   ▐││                                                             │
│ challenge              144 B json      200          386 ms           ▏   ▐││ Body  protobuf, 6 B  [parsed · p: source]                   │
│ config                   0 B           302           61 ms           ▏   ▐││ 1: 4                                                        │
│ ↪ config.json          106 B json      200          195 ms           ▏   ▐││ 2: "ok"                                                     │
│ attest                 180 B json      200          2.75 s           ▐█  ▐││                                                             │
│ metrics                  6 B protobuf  200          224 ms           ▕   ▐││                                                             │
│ monitor                302 B json      200          1.41 s            ▋  ▐││                                                             │
│ events                  17 B json      200          1.14 s            ▌  ▐││                                                             │
│ liveness-model-v3…     150 B json      404          346 ms            ▏  ▐││                                                             │
│ enroll                  72 B json      200          2.08 s            ▕▊ ▐││                                                             │
│ documents               93 B json      200          515 ms            ▕▏ ▐││                                                             │
│ monitor                302 B json      200          1.50 s            ▕▋ ▐││                                                             │
│ report                 305 B html      500          219 ms             ▏ ▐││                                                             │
│ lookup?fields=cou…     101 B json      200          507 ms             ▕ ▐││                                                             │
│ monitor                302 B json      200          1.49 s             ▕▌▐││                                                             │
│ status?sessionId=…     263 B json      200          326 ms             ▕  ││                                                             │
│ threshold                              ···          1.90 s              █ ││                                                             │
│ events                  17 B json      200          970 ms              ▌ ││                                                             │
╰───────────────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
