host/crates/tui/tests/snapshots/snapshots__detail_redirect_hop.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, |t| t.hop > 0, \"\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active           26 requests · 13 KB in · 18 KB out
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.1 KB/s   ━ Sending 1.3 KB/s ─╮
│  16 KB/s                                                                             ┊                                                   │
│                                                                                      ┊                                                   │
│                                                                                      ┊            ┏━┓                                    │
│                                                                                      ┊            ┃ ┃                                    │
│ 8.0 KB/s                                                                             ┊            ┃ ┃                ┏━┓                 │
│                                                                                      ┊            ┃ ┗━┓  ┏┓      ┏━┓ ┃ ┃          ┏━┓    │
│                                                                                      ┊      ┏━┓━┓ ┃   ┗━┓┛┗━━┏━┓━┛ ┗━┓ ┏━━━━━━┓━━┓┃ ┃    │
│                                                                                      ━━┏━━━━┛ ┗━┗━┛ ┏━┛ ┗┓┏━━┛ ┗━━━┛ ┗━┛┓┏━━┓┏┗━━┗┛ ┗━┓━ │
│        0                                                                             ━━┛        ┗━━━┛    ┗┛             ┗┛  ┗┛    ┗━┛ ┗━ │
│                                                                                      00:00.000            00:05.000            00:10.000 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ───────────────────────────────╮ ╭─ config.json ─ Response body ─ Request body ───────────────╮
│ Name                  Size  Type      Status         Time   Timeline      │ │ {                                                          │
│ token                391 B  json      200          513 ms           █    ▐│ │   "version": 42,                                           │
│ init                 316 B  json      200          2.01 s           █▎   ▐│ │   "minSdk": "2.3.0",                                       │
│ monitor              302 B  json      200          1.58 s           ▐▏   ▐│ │   "flags": {                                               │
│ events                17 B  json      200          1.45 s           █▍   ▐│ │     "newLivenessModel": true,                              │
│ u_4821.png          4.5 KB  png       200          476 ms            ▏   ▐│ │     "strictAttestation": false                             │
│ monitor              302 B  json      200          1.53 s            ▐   ▐│ │   },                                                       │
│ challenge            144 B  json      200          386 ms            ▏   ▐│ │   "rollout": 0.25                                          │
│ config                 0 B            302           61 ms            ▏   ▐│ ╰────────────────────────────────────────────────────────────╯
│ ↪ config.json        106 B  json      200          195 ms            ▏   ▐│ ╭─ Overview ─ Response ─ Request ─ Call Stack ───────────────╮
│ attest               180 B  json      200          2.75 s            ▐▉  ▐│ │ Request           config.json                              │
│ metrics                6 B  protobuf  200          224 ms             ▏  ▐│ │ Method            GET                                      │
│ monitor              302 B  json      200          1.41 s             ▌  ▐│ │ Status            200 OK                                   │
│ events                17 B  json      200          1.14 s             ▌  ▐│ │ URL               https://cdn.example.app/sdk/v2/config.   │
│ liveness-model-…     150 B  json      404          346 ms             ▏  ▐│ │                   json                                     │
│ enroll                72 B  json      200          2.08 s              ▉ ▐│ │ Redirect          hop 2 of this call ·                     │
│ documents             93 B  json      200          515 ms              █ ▐│ │                   after http://cdn.example.app/sdk/config  │
│ monitor              302 B  json      200          1.50 s              ▊ ▐│ │                   (302)                                    │
│ report               305 B  html      500          219 ms              ▏ ▐│ │ Request type      —                                        │
│ lookup?fields=c…     101 B  json      200          507 ms              ▕ ▐│ │ Response type     application/json; charset=utf-8          │
│ monitor              302 B  json      200          1.49 s              ▕▌▐│ │ Response size     106 B                                    │
│ status?sessionI…     263 B  json      200          326 ms               ▏ │ │ Initiating thread DefaultDispatcher-worker-2  id 59 ·      │
│ threshold                             ···          1.90 s               █ │ │                   call site                                │
│ events                17 B  json      200          970 ms               ▏ │ │ Client            OkHttp 4.12.0                            │
╰───────────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
