host/crates/tui/tests/snapshots/snapshots__detail_response_json_source.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, init(), \"lp\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active                         images: half-blocks
 NETWORK  all app traffic · T switches                                                            ━ Receiving 3.3 KB/s   ━ Sending 1.4 KB/s
  16 KB/s                                                                               ┊
                                                                                        ┊            ┏━┓
                                                                                        ┊            ┃ ┃
                                                                                        ┊            ┃ ┃                 ┏┓
 8.0 KB/s                                                                               ┊            ┃ ┗┓           ┏━┓ ┏┛┃           ┏┓
                                                                                        ┊      ┏━━┓  ┃  ┗┏━┓━━┓┏┏━┓━┛ ┃ ┃ ┗┏━━━━━┓ ┏━┏┛┗┓
                                                                                        ━━┏┓┏━━┛━━┗┓━┛ ┏━┛ ┗┓┏┗┛┛ ┗━┓ ┗━┛┓┏┛┏━━┓ ┗━┛━┛┓┏┗━┓
        0                                                                               ━━┛┗┛      ┗━━━┛    ┗┛      ┗━┛  ┗┛┗┛  ┗━┛    ┗┛  ┗
                                                                                        00:00.000            00:05.000
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 Connection View   Thread View   Rules                               26 rows │  Overview   Response   Request   Call Stack               ✕
Name                      Size Type      Status         Time Timeline        │ HTTP/2 200 OK
token                    391 B json      200          513 ms          █     ▐│
init                     316 B json      200          2.01 s          ▕▊    ▐│ Headers (8)
monitor                  302 B json      200          1.58 s          ▕▌    ▐│ date: Tue, 29 Sep 2026 05:10:01 GMT
events                    17 B json      200          1.45 s           █    ▐│ content-type: application/json; charset=utf-8
u_4821.png              4.5 KB png       200          476 ms           ▏    ▐│ content-length: 316
monitor                  302 B json      200          1.53 s           ▕▌   ▐│ cache-control: no-cache, no-store
challenge                144 B json      200          386 ms           ▕    ▐│ x-request-id: e9199733-54bd-4086-af69-d7eeccf00dee
config                     0 B           302           61 ms            ▏   ▐│ server: envoy
↪ config.json            106 B json      200          195 ms            ▏   ▐│ set-cookie: dsid=ced258d0da790089d2f9467c; Path=/; Secure; H
attest                   180 B json      200          2.75 s            █▌  ▐│ set-cookie: region=ap-south-1; Path=/; Secure
metrics                    6 B protobuf  200          224 ms            ▏   ▐│
monitor                  302 B json      200          1.41 s            ▕▌  ▐│ Body  JSON, 316 B  [source · p: parsed]
events                    17 B json      200          1.14 s            ▕▌  ▐│ {"ok":true,"sessionId":"session_15bce3a5a963c9fde0ebe700e9d7
liveness-model-v3.j…     150 B json      404          346 ms             █  ▐│
enroll                    72 B json      200          2.08 s             ▐█ ▐│
documents                 93 B json      200          515 ms             ▕  ▐│
monitor                  302 B json      200          1.50 s             ▕▌ ▐│
report                   305 B html      500          219 ms              ▏ ▐│
lookup?fields=count…     101 B json      200          507 ms              █ ▐│
monitor                  302 B json      200          1.49 s              ▕▌▐│
status?sessionId=se…     263 B json      200          326 ms              ▕ ▐│
threshold                                ···          1.90 s               █▐│
events                    17 B json      200          970 ms               ▌▐│
status?sessionId=se…     263 B json      200          174 ms               ▏▐│
fonts.json                               canceled     380 ms               ▏ │
 26 requests  13 KB in  18 KB out  1 failed  0 dropped  ⚠ studio inspector present                                    source view   ? help
